<resources>
    <string name="app_name">TravelerIM</string>
    <string name="username">用户名</string>
    <string name="password">密  码</string>
    <string name="password_r">确认密码</string>
    <string name="create_user">确认创建</string>
    <string name="email">邮  箱</string>
    <string name="login">登 入</string>
    <string name="regist">注 册</string>
    <string name="recent_people">消息</string>
    <string name="friend">好友</string>
    <string name="setting">我</string>
    <string name="exitApp">退出应用</string>
    <string name="exitLogin">退出登入</string>
    <string name="send">发送</string>
    <string name="remember_psw">记住密码</string>
    <string name="auto_login">自动登入</string>
    <string name="menu_add_friend">添加好友</string>
    <string name="menu_help">帮助</string>
</resources>
