<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/regist_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minEms="3" />

    <EditText
        android:id="@+id/regist_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxEms="16"
        android:minEms="6" />

    <EditText
        android:id="@+id/regist_psw_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:hint="@string/password_r"
        android:inputType="textPassword"
        android:maxEms="16"
        android:minEms="6" />

    <EditText
        android:id="@+id/regist_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:layout_weight="1"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxEms="16"
        android:minEms="6" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="createUser"
        android:text="@string/create_user" />
</LinearLayout>
